# globus-timer-cli

./: .gitignore  MIGRATING.rst  Makefile  README.md  README.rst  pyproject.toml
pypi/: README.md
tests/: conftest.py  test_parse_timedelta.py
tests/transfer/: conftest.py  test_transfer.py
timer_cli/: auth.py  dynamic_dep_storage.py  job.py  main.py  output.py  transfer.py
