[tool.poetry]
name = "globus-timer-cli"
version = "0.1.13"
description = "CLI for interacting with the timer API"
authors = ["Rudyard Richter <rudyard@globus.org>"]
keywords = [
  "globus",
  "automation",
  "cli"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: Free To Use But Restricted",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "pypi/README.md"
packages = [
    { include = "timer_cli" }
]

[tool.poetry.scripts]
globus-timer = "timer_cli.main:main"

[tool.poetry.dependencies]
python = "^3.6"
fair-research-login = "^0.2"
requests = "^2.24.0"
click = "^7.1.2"
# fair-research-login = {path = "../fair-research/native-login"}

[tool.poetry.dev-dependencies]
importmagic = "^0.1.7"
epc = "^0.0.5"
pyls-black = "^0.4.6"
pyls-isort = "^0.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
