[tool.poetry]
name = "globus-timer-cli"
version = "0.2.0"
description = "CLI for interacting with the timer API"
authors = ["Rudyard Richter <rudyard@globus.org>"]
keywords = [
  "globus",
  "automation",
  "cli"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: Free To Use But Restricted",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "pypi/README.md"
packages = [
    { include = "timer_cli" }
]

[tool.poetry.scripts]
globus-timer = "timer_cli.main:main"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
click = "^7.1.2"
globus-sdk = "^2.0.1"

[tool.poetry.dev-dependencies]
importmagic = "^0.1.7"
epc = "^0.0.5"
pyls-black = "^0.4.6"
isort = "^4.3.21"
pytest = "^6.2.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_sort_within_sections = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

